# CLOVER-Mat

./: README.md  pyproject.toml
configs/experiments/: optoelectronic_solar.yaml  thermoelectric.yaml
custom_rewards/: bandgap_reward.py
notebooks/: tutorial_ag_bi_i.ipynb
rl-crystal-gen/configs/experiments/: ag_bi_i_ehull.yaml
rl-crystal-gen/scripts/: train_rl.py
rl-crystal-gen/src/rewards/: __init__.py  base.py  diversity_reward.py  validity_reward.py
rl-crystal-gen/tests/: test_rewards.py
src/generator/: chemeleon2_wrapper.py
src/rewards/: __init__.py  bandgap_reward.py  composition_reward.py  defect_reward.py  dielectric_reward.py  effective_mass_reward.py  ehull_reward.py  optical_absorption_reward.py  phonon_reward.py  thermal_conductivity_reward.py
src/rl/: grpo_trainer.py  reward_builder.py
