[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-crystal-gen"
version = "0.1.0"
description = "Reinforcement Learning for Crystal Structure Generation with E_hull reward"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
keywords = ["crystal structure", "reinforcement learning", "materials science", "generative models"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  # Core ML
  "torch>=2.1",
  "numpy>=1.26",
  # Materials / structure
  "pymatgen>=2024.1",
  "mp-api>=0.41",
  "smact>=2.5",
  # Config management
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  # Logging
  "wandb>=0.16",
  "rich>=13.0",
  # Utilities
  "tqdm>=4.66",
  "pydantic>=2.0",
  "monty>=2024.1",
]

[project.optional-dependencies]
mace = [
  "mace-torch>=0.3",         # MACE force field for fast E_hull estimation
]
chemeleon2 = [
  "chemeleon2 @ git+https://github.com/hspark1212/chemeleon2.git",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff",
  "pre-commit",
  "ipykernel",
  "jupyter",
]
all = ["rl-crystal-gen[mace,chemeleon2,dev]"]

[project.scripts]
rlcg-train    = "scripts.train_rl:main"
rlcg-sample   = "scripts.sample:main"
rlcg-evaluate = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "custom_rewards*", "scripts*", "configs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
